--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "Programming Languages"
     ],
     "activationEvents": [],
-    "main": "./dist/extension.js",
+    "main": "./client/out/extension",
     "contributes": {
         "languages": [
             {
@@ -34,28 +34,22 @@
         ]
     },
     "scripts": {
-        "vscode:prepublish": "npm run package",
-        "compile": "webpack",
-        "watch": "webpack --watch",
-        "package": "webpack --mode production --devtool hidden-source-map",
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -b",
+        "watch": "tsc -b -w",
         "compile-tests": "tsc -p . --outDir out",
         "watch-tests": "tsc -p . -w --outDir out",
         "pretest": "npm run compile-tests && npm run compile && npm run lint",
-        "lint": "eslint src",
-        "test": "vscode-test"
+        "lint": "eslint ./client/src ./server/src --ext .ts,.tsx",
+        "postinstall": "cd client && npm i && cd ../server && npm i && cd .."
     },
     "devDependencies": {
-        "@types/vscode": "^1.93.0",
         "@types/mocha": "^10.0.7",
         "@types/node": "20.x",
         "@typescript-eslint/eslint-plugin": "^8.3.0",
         "@typescript-eslint/parser": "^8.3.0",
         "eslint": "^9.9.1",
-        "typescript": "^5.5.4",
-        "ts-loader": "^9.5.1",
-        "webpack": "^5.94.0",
-        "webpack-cli": "^5.1.4",
-        "@vscode/test-cli": "^0.0.10",
-        "@vscode/test-electron": "^2.4.1"
+        "mocha": "^10.7.3",
+        "typescript": "^5.5.4"
     }
 }
